<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakeme.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/small_padding"
        tools:listitem="@layout/recipe_grid_item"/>
</LinearLayout>
